--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Ola, meu nome é <span>Pedro Guerrart.</span>
-                    sou Web Developer.
+                    Ola, meu nome é <span>Pedro Guerrart</span>
+                    e sou futuro Game Developer.
                 </h1>
                 <p>
-                    Sou um desenvolvedor web em busca de oportunidades para criar sites incríveis.
-                    Tenho habilidades em [Java, CSS, JavaScript, HTML], e estou animado para trabalhar em
-                    projetos desafiadores para aprimorar minhas habilidades e aprender novas tecnologias
-                    Se você precisa de ajuda com seu site ou projeto, entre em contato comigo. 
-                    Estou ansioso para ajudá-lo a criar algo incrível.
+                    Meu nome é Pedro, tenho 19 anos e sou estudante de Análise e Desenvolvimento de
+                    Sistemas. Sou apaixonado por jogos e, em meu tempo livre, utilizo Java, CSS, JavaScript e 
+                    HTML para criar jogos. Meu objetivo é me tornar um game developer no futuro e, por
+                    isso, estou sempre em busca de novas oportunidades para aplicar meus conhecimentos 
+                    em jogos e desenvolvimento de software.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1dD53ZKvj4K-SNIjCZNaNAitV6LInxFk2/view?usp=sharing" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -50,18 +50,26 @@
                 <div class="left-about">
                     <h4>Informações sobre mim</h4>
                     <p>
-                        Meu nome é Pedro e sou um desenvolvedor web com habilidades em Java, CSSC,
-                        JavaScript e HTML. Tenho um interesse particular em desenvolvimento de jogos, com um, 
-                        forte compromisso em criar soluções criativas e inovadoras para proporcionar experiências envolventes para os jogadores.
-                        <br /> <br />  Embora não tenha experiência profissional na 
-                        área de desenvolvimento de jogos, estou sempre em busca de aprender e aprimorar
-                        minhas habilidades para criar jogos incríveis. Possuo habilidades em várias linguagens de
-                        programação e estou sempre em busca de atualização constante em novas tecnologias e  
-                        tendências do mercado. Com dedicação e paixão pela programação, estou pronto para 
-                        assumir qualquer desafio em projetos web e contribuir para a equipe de desenvolvimento de software.
+                        Meu nome é Pedro e sou um aspirante a desenvolvedor de jogos apaixonado por
+                        tecnologia e pela criação de experiências imersivas para os jogadores. Com 19 anos de
+                        idade, tenho habilidades em Java, CSS, Java Script e HTML, bem como conhecimentos em 
+                        outras linguagens de programação e ferramentas de desenvolvimento de jogos. 
+                        Atualmente, estou cursando Análise e Desenvolvimento de Sistemas para aprimorar ainda
+                        mais minhas habilidades técnicas e teóricas.
+                        <br /> <br /> 
+                        Embora eu não tenha experiência de mercado ou trabalhado profissionalmente ainda, 
+                        tenho alguns de projetos pessoais de jogos que demonstram minha
+                        capacidade de criar mecânicas de jogabilidade desafiadoras e gráficos.
+                        Além disso, estou sempre em busca de feedback para melhorar minhas habilidades e aprimorar ainda mais meus projetos.  
+                        Meus objetivos como desenvolvedor de jogos incluem trabalhar em projetos ambiciosos, 
+                        contribuir para a criação de jogos inovadores e imersivos e crescer profissionalmente ao 
+                        lado de equipes talentosas e apaixonadas pelo que fazem. Acredito que com meu
+                        entusiasmo e dedicação, posso me tornar um desenvolvedor de jogos de sucesso no 
+                        futuro. Por fim, estou ansioso para colaborar em projetos desafiadores e para aprender
+                        mais sobre a indústria de jogos enquanto continuo a evoluir minhas habilidades.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1dD53ZKvj4K-SNIjCZNaNAitV6LInxFk2/view?usp=sharing" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -107,7 +115,7 @@
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">CSSS</p>
+                        <p class="prog-title">CSS</p>
                         <div class="progress-con">
                             <p class="prog-text">43%</p>
                             <div class="progress">
@@ -194,10 +202,10 @@
                     <div class="hover-items">
                         <h3>Pokemon Game</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/PedroGuerrart/Pokemon-Game" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://projetopokemon.netlify.app/" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
                             <a href="#" class="icon">
@@ -213,10 +221,10 @@
                     <div class="hover-items">
                         <h3>Game Fight</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/PedroGuerrart/Figh-game-project" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://pedroguerrart.netlify.app/" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
                             <a href="#" class="icon">
@@ -232,10 +240,10 @@
                     <div class="hover-items">
                         <h3>Space invaders</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/PedroGuerrart/Space-Invaders" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
+                            <a href="https://projetospace.netlify.app/" class="icon">
                                 <i class="fab fa-behance"></i>
                             </a>
                             <a href="#" class="icon">
@@ -332,7 +340,7 @@
                                 <a href="#" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#" target="_blank">
+                                <a href="https://github.com/PedroGuerrart" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
                                 <a href="#" target="_blank">
@@ -354,7 +362,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="SUA MENSAGEM..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="#" class="main-btn">
+                                <a href="https://drive.google.com/file/d/1dD53ZKvj4K-SNIjCZNaNAitV6LInxFk2/view?usp=sharing" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
