--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     em jogos e desenvolvimento de software.
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1dD53ZKvj4K-SNIjCZNaNAitV6LInxFk2/view?usp=sharing" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1qOglBx1Bmhut0gtW-6fk6nhljOOzUEqD/view?usp=share_link" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -69,7 +69,7 @@
                         mais sobre a indústria de jogos enquanto continuo a evoluir minhas habilidades.
                     </p>
                     <div class="btn-con">
-                        <a href="https://drive.google.com/file/d/1dD53ZKvj4K-SNIjCZNaNAitV6LInxFk2/view?usp=sharing" class="main-btn">
+                        <a href="https://drive.google.com/file/d/1qOglBx1Bmhut0gtW-6fk6nhljOOzUEqD/view?usp=share_link" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -362,7 +362,7 @@
                                 <textarea name="" id="" cols="15" rows="8" placeholder="SUA MENSAGEM..."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="https://drive.google.com/file/d/1dD53ZKvj4K-SNIjCZNaNAitV6LInxFk2/view?usp=sharing" class="main-btn">
+                                <a href="https://drive.google.com/file/d/1qOglBx1Bmhut0gtW-6fk6nhljOOzUEqD/view?usp=share_link" class="main-btn">
                                     <span class="btn-text">Download CV</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
