--- a/index.html
+++ b/index.html
@@ -252,6 +252,25 @@
                         </div>
                     </div>
                 </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/port9.PNG" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Multi rooms</h3>
+                        <div class="icons">
+                            <a href="https://github.com/PedroGuerrart/Multi-rooms" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://projetorooms.netlify.app/" class="icon">
+                                <i class="fab fa-behance"></i>
+                            </a>
+                            <a href="#" class="icon">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
         </section>
         <section class="container" id="blogs">
             <div class="blogs-content">
