--- a/index.html
+++ b/index.html
@@ -187,12 +187,13 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2019 - 2019</p>
-                    <h5>Curso<span> - e Preparação para o mundo do trabalho Coletivo Jovem COCA-COLA</span></h5>
+                    <p class="tl-duration">2023 - 2024</p>
+                    <h5>Curso<span> - British and American</span></h5>
                     <p>
-                        Atividade Comercial e Marketing, Ponto de Venda, Comercialização e Merchandising, Promoção e estratégia de Comunicação,
-                        Montagem e produção de Eventos, Comunicação, atendimento, relacionamento e serviços
-                        ao consumidor, Mundo do trabalho e Empregabilidade.
+                        Curso de Inglês Britânico e Americano
+                    </p>
+                    <p> 
+                        Com foco na fluência, pronúncia autêntica e compreensão cultural, os participantes desenvolverão uma proficiência completa e versátil no inglês, enriquecendo suas capacidades de comunicação e adquirindo um diferencial no mercado global.
                     </p>
                 </div>
             </div>
