--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
                         - Desenvolvimento de projetos utilizando as linguagens C# e JavaScript, aplicando os princípios de lógica de programação para criar soluções eficientes e funcionais. 
                     </p>
                     <p> 
-                        - com desenvolvimento web, onde pude aplicar conhecimentos em HTML e CSS para criar interfaces responsivas e atrativas.
+                        - Desenvolvimento web, onde pude aplicar conhecimentos em HTML e CSS para criar interfaces responsivas e atrativas.
                     </p>
-                    <p> - de exercícios práticos que me proporcionaram um aprofundamento dos conceitos aprendidos em sala de aula, fortalecendo minha compreensão teórica.
+                    <p> - Exercícios práticos que me proporcionaram um aprofundamento dos conceitos aprendidos em sala de aula, fortalecendo minha compreensão teórica.
                         </p>
                         <p>
-                        - de um desafio de implementação de um CRUD (Create, Read, Update, Delete) que demonstrou minha capacidade de aplicar os conhecimentos adquiridos para criar uma solução funcional e eficiente.
+                        - Desafio de implementação de um CRUD (Create, Read, Update, Delete) que demonstrou minha capacidade de aplicar os conhecimentos adquiridos para criar uma solução funcional e eficiente.
                       </p>
                 </div>
                 <div class="timeline-item">
